force-app/main/default/objects/Building_Brokers__c/Building_Brokers__c.object-meta.xml
<CustomObject>
    <description>To handle brokers related to buildings and tenants</description>
    <label>Listed Building</label>
    <nameField>
        <displayFormat>B{00000}</displayFormat>
        <label>Broker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listed Buildings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>