force-app/main/default/objects/Building_Brokers__c/fields/Broker_Company__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company__c</fullName>
    <formula>text(Broker__r.Broker_Company__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Company</label>
    <type>Text</type>
</CustomField>