force-app/main/default/objects/Building_Brokers__c/fields/Broker_Company_Old__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company_Old__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot;&amp;Broker__r.AccountId&amp; &quot;/view&quot;  ,  Broker__r.Account.Name  ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage old</label>
    <type>Text</type>
</CustomField>