force-app/main/default/objects/Building_Brokers__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Building_Brokers</relationshipName>
    <type>Lookup</type>
</CustomField>