force-app/main/default/objects/Building_Brokers__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Listing Brokers</relationshipLabel>
    <relationshipName>Brokers</relationshipName>
    <type>Lookup</type>
</CustomField>