force-app/main/default/objects/Building_Brokers__c/fields/Cell__c.field-meta.xml
<CustomField>
    <fullName>Cell__c</fullName>
    <formula>Broker__r.Cell_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cell</label>
    <type>Text</type>
</CustomField>