force-app/main/default/objects/Building_Brokers__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <formula>Building__r.Landlord__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord</label>
    <type>Text</type>
</CustomField>